add separate webgl and svg compare nb

--- a/_posts/python/WebGL/comparewebgl.ipynb
+++ b/_posts/python/WebGL/comparewebgl.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#WebGL vs SVG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# WebGL vs SVG in Python"
+    "###SCATTER PLOTS WITH 75,000 RANDOM POINTS"
    ]
   },
   {
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +37,7 @@
        "'1.8.12'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,70 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Compare WebGL and SVG"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Checkout [this notebook](https://plot.ly/python/compare-webgl-svg) to compare WebGL and SVG scatter plots with 75,000 random data points"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#####WebGL with 100,000  points"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8823.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "N = 100000\n",
-    "trace = go.Scattergl(\n",
-    "    x = np.random.randn(N),\n",
-    "    y = np.random.randn(N),\n",
-    "    mode = 'markers',\n",
-    "    marker = dict(\n",
-    "        line = dict(\n",
-    "            width = 1, \n",
-    "            color = '#404040')\n",
-    "    )\n",
-    ")\n",
-    "data = [trace]\n",
-    "py.iplot(data, filename='WebGL100000')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "####WebGL with 1 Million Points"
+    "###WEBGL"
    ]
   },
   {
@@ -126,7 +72,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8817.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9028.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -143,46 +89,72 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "N = 1000000\n",
+    "N = 75000\n",
     "trace = go.Scattergl(\n",
     "    x = np.random.randn(N),\n",
     "    y = np.random.randn(N),\n",
     "    mode = 'markers',\n",
     "    marker = dict(\n",
-    "        color = 'rgb(152, 0, 0)',\n",
     "        line = dict(\n",
-    "            width = 1,\n",
-    "            color = 'rgb(0,0,0)')\n",
+    "            width = 1, \n",
+    "            color = '#404040')\n",
     "    )\n",
     ")\n",
     "data = [trace]\n",
-    "py.iplot(data, filename='WebGLmillion')"
+    "py.iplot(data, filename='compare_webgl')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####WebGL with many traces"
+    "###SVG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:236: UserWarning:\n",
+      "\n",
+      "Woah there! Look at all those points! Due to browser limitations, the Plotly SVG drawing functions have a hard time graphing more than 500k data points for line charts, or 40k points for other types of charts. Here are some suggestions:\n",
+      "(1) Use the `plotly.graph_objs.Scattergl` trace object to generate a WebGl graph.\n",
+      "(2) Trying using the image API to return an image instead of a graph URL\n",
+      "(3) Use matplotlib\n",
+      "(4) See if you can create your visualization with fewer data points\n",
+      "\n",
+      "If the visualization you're using aggregates points (e.g., box plot, histogram, etc.) you can disregard this warning.\n",
+      "\n",
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:1416: UserWarning:\n",
+      "\n",
+      "Estimated Draw Time Too Long\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The draw time for this plot will be slow for all clients.\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8850.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9025.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,37 +165,40 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "data = []\n",
-    "trace_num = 20\n",
-    "point_num = 10000\n",
-    "for i in range(trace_num):\n",
-    "    data.append(go.Scattergl(\n",
-    "        x = np.linspace(0, 1, point_num),\n",
-    "        y = np.random.randn(point_num)+(i*5)\n",
+    "N = 75000\n",
+    "trace = go.Scatter(\n",
+    "    x = np.random.randn(N),\n",
+    "    y = np.random.randn(N),\n",
+    "    mode = 'markers',\n",
+    "    marker = dict(\n",
+    "        line = dict(\n",
+    "            width = 1, \n",
+    "            color = '#404040')\n",
     "    )\n",
     ")\n",
-    "layout = dict(showlegend=False)\n",
-    "fig=dict(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='WebGL_line')"
+    "data = [trace]\n",
+    "py.iplot(data, filename='svg')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Reference"
+    "###References"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See https://plot.ly/python/reference/#scattergl for more information"
+    "For more information see <br>\n",
+    "`Scattergl()` : https://plot.ly/python/reference/#scattergl <br>\n",
+    "`Scatter()` : https://plot.ly/python/reference/#scatter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -260,14 +235,6 @@
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
-     ]
     }
    ],
    "source": [
@@ -279,12 +246,10 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'webgl.ipynb', 'python/webgl-vs-svg', 'Python WebGL vs SVG | plotly',\n",
-    "    'Using WebGL with Scattergl() in Python with Plotly. '\n",
-    "    'Examples comparing WebGL scatter charts to SVG scatter charts in Python with Plotly.',\n",
-    "    name = 'WebGL vs SVG',\n",
-    "    thumbnail='/images/webgl.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=3)"
+    "    'comparewebgl.ipynb', 'python/compare-webgl-svg', 'Python Comparing WebGL vs SVG | plotly',\n",
+    "    'Comparing WebGL with Scattergl() to SVG with Scatter() in Python with Plotly.',\n",
+    "    name = 'Compare WebGL vs SVG', language='python',\n",
+    "    page_type='example_index')"
    ]
   },
   {
