add 75000 pt webgl v svg comparision and link in webgl doc

--- a/_posts/python/WebGL/comparewebgl.ipynb
+++ b/_posts/python/WebGL/comparewebgl.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#WebGL vs SVG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# WebGL vs SVG in Python"
+    "###SCATTER PLOTS WITH 75,000 RANDOM POINTS"
    ]
   },
   {
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +37,7 @@
        "'1.8.12'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,21 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Compare WebGL and SVG"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Checkout [this notebook](https://plot.ly/python/compare-webgl-svg) to compare WebGL and SVG scatter plots with 75,000 random data points"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#####WebGL with 100,000  points"
+    "###WEBGL"
    ]
   },
   {
@@ -77,7 +72,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8823.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9030.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -94,7 +89,7 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "N = 100000\n",
+    "N = 75000\n",
     "trace = go.Scattergl(\n",
     "    x = np.random.randn(N),\n",
     "    y = np.random.randn(N),\n",
@@ -106,33 +101,42 @@
     "    )\n",
     ")\n",
     "data = [trace]\n",
-    "py.iplot(data, filename='WebGL100000')"
+    "layout = dict(title = 'WEBGL')\n",
+    "fig = dict(data=data, layout=layout)\n",
+    "py.iplot(data, filename='webgl75')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####WebGL with 1 Million Points"
+    "###SVG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The draw time for this plot will be slow for all clients.\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8817.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9032.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,87 +147,42 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "N = 1000000\n",
-    "trace = go.Scattergl(\n",
+    "N = 75000\n",
+    "trace = go.Scatter(\n",
     "    x = np.random.randn(N),\n",
     "    y = np.random.randn(N),\n",
     "    mode = 'markers',\n",
     "    marker = dict(\n",
-    "        color = 'rgb(152, 0, 0)',\n",
     "        line = dict(\n",
-    "            width = 1,\n",
-    "            color = 'rgb(0,0,0)')\n",
+    "            width = 1, \n",
+    "            color = '#404040')\n",
     "    )\n",
     ")\n",
     "data = [trace]\n",
-    "py.iplot(data, filename='WebGLmillion')"
+    "layout = dict(title = 'SVG')\n",
+    "fig = dict(data=data, layout=layout)\n",
+    "py.iplot(fig, filename='svg75')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####WebGL with many traces"
+    "###References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more information see <br>\n",
+    "`Scattergl()` : https://plot.ly/python/reference/#scattergl <br>\n",
+    "`Scatter()` : https://plot.ly/python/reference/#scatter"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8850.embed\" height=\"525px\" width=\"100%\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "data = []\n",
-    "trace_num = 20\n",
-    "point_num = 5000\n",
-    "for i in range(trace_num):\n",
-    "    data.append(go.Scattergl(\n",
-    "        x = np.linspace(0, 1, point_num),\n",
-    "        y = np.random.randn(point_num)+(i*5)\n",
-    "    )\n",
-    ")\n",
-    "layout = dict(showlegend=False)\n",
-    "fig=dict(data=data, layout=layout)\n",
-    "py.iplot(fig, filename='WebGL_line')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###Reference"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "See https://plot.ly/python/reference/#scattergl for more information"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -265,10 +224,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -281,12 +238,10 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'webgl.ipynb', 'python/webgl-vs-svg', 'Python WebGL vs SVG | plotly',\n",
-    "    'Using WebGL with Scattergl() in Python with Plotly. '\n",
-    "    'Examples comparing WebGL scatter charts to SVG scatter charts in Python with Plotly.',\n",
-    "    name = 'WebGL vs SVG',\n",
-    "    thumbnail='/images/webgl.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=3)"
+    "    'comparewebgl.ipynb', 'python/compare-webgl-svg', 'Python Comparing WebGL vs SVG | plotly',\n",
+    "    'Comparing WebGL with Scattergl() to SVG with Scatter() in Python with Plotly.',\n",
+    "    name = 'Compare WebGL vs SVG', language='python',\n",
+    "    page_type='example_index')"
    ]
   },
   {
