--- a/_posts/python/3d-network/Les-miserables-network.ipynb
+++ b/_posts/python/3d-network/Les-miserables-network.ipynb
@@ -18,7 +18,7 @@
    "version": "2.7.9"
   },
   "name": "",
-  "signature": "sha256:71238e7a426084f8fb4f90a980db1fc36670ee1204ad97afe8a9c767b7b58e14"
+  "signature": "sha256:9a734989ce093c99f7c98fff76fe86d85f89597b647dfda9c85f467cd5543637"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -29,7 +29,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "#3D Network Graphs with Plotly and igraph"
+      "##3D Network Graphs with Plotly and igraph"
      ]
     },
     {
@@ -57,7 +57,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -71,13 +71,13 @@
      "collapsed": false,
      "input": [
       "import json\n",
+      "import urllib2\n",
       "\n",
       "data = []\n",
-      "with open('miserables.json') as f: \n",
-      "    for line in f:\n",
-      "        data.append(json.loads(line)) \n",
-      "\n",
-      "data=data[0]\n",
+      "req = urllib2.Request(\"https://raw.githubusercontent.com/plotly/datasets/master/miserables.json\")\n",
+      "opener = urllib2.build_opener()\n",
+      "f = opener.open(req)\n",
+      "data = json.loads(f.read())\n",
       "\n",
       "print data.keys()"
      ],
@@ -92,7 +92,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -114,13 +114,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 11,
        "text": [
         "77"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -141,7 +141,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -162,13 +162,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 13,
        "text": [
         "{u'group': 1, u'name': u'Myriel'}"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -183,7 +183,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -201,7 +201,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -222,13 +222,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 16,
        "text": [
-        "[-5.223393978741167, 3.135841787313092, -1.9125049951988378]"
+        "[-2.419184216272965, -5.200101033772013, 4.673402139645248]"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -255,7 +255,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -267,7 +267,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -298,7 +298,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
@@ -315,7 +315,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -354,7 +354,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 13
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -374,13 +374,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 22,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x105f0ed10>"
+        "<plotly.tools.PlotlyDisplay at 0x106576250>"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -410,7 +410,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x105d276d0>"
+        "<IPython.core.display.HTML at 0x107098610>"
        ]
       },
       {
@@ -420,7 +420,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x105d27610>"
+        "<IPython.core.display.HTML at 0x1070981d0>"
        ]
       },
       {
@@ -429,9 +429,19 @@
        "text": [
         "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
        ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+        "\n",
+        "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+        "\n"
+       ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
