update api breaking changes

--- a/_posts/r/2015-07-30-filenames.Rmd
+++ b/_posts/r/2015-07-30-filenames.Rmd
@@ -18,49 +18,26 @@ Sys.setenv("plotly_username"="RPlotBot")
 Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```
 
-```{r, message=FALSE}
+To create a plotly figure on a plotly server, use `plotly_POST()`.
+
+```{r}
 library(plotly)
-```
-
-By default, if you don't specify a filename,
-printing `plot_ly` will create a new plot in your online plotly account.
-
-```{r, message=FALSE}
-plot_ly(x = c(1, 2), y = c(1, 2))
-```
-<br>
-If you want to overwrite the plot and keep the graph served from the same plotly URL, specify a filename.
-This implicitly overwrites your plotly graph.
-View your Plotly graphs at [https://plot.ly/organize](https://plot.ly/organize).
-
-```{r, message=FALSE}
-plot_ly(x = c(1, 2), y = c(1, 2), filename="name-of-my-plotly-file")
-```
-
-Overwriting your graph works a bit differently when using ```subplots```.
-To update a graph with ```subplots``` use ```plotly_build()``` and then assign the ```filename```.
-
-```{r, message=FALSE}
-p <- plotly_build(subplot(
-	plot_ly(x = c(1, 2), y = c(1, 2)),
-	plot_ly(x = c(1, 2), y = c(2, 1)),
-	margin = 0.05
-	)
-)
-p$filename <- "overwrite_subplots"
-```
-
-Add modifications then see the updated graph at the same plotly URL:
-
-```{r, message=FALSE}
-p <- layout(showlegend = FALSE, title = "Overwrite Subplots")
-p$filename <- "overwrite_subplots"
-p
+p <- plot_ly(x = c(1, 2), y = c(1, 2))
+plotly_POST(p)
 ```
 
 <br>
+
+If you don't include a filename, a new plot will be made on your online plotly account. If you want to overwrite a plot (i.e., keep the graph served from the same plotly URL), specify a filename. This implicitly overwrites your plotly graph.
+
+```{r}
+plotly_POST(p, filename = "name-of-my-plotly-file")
+```
+
 If the filename contains "/", it will automatically create a plotly folder.
 
-```{r, message=FALSE}
-plot_ly(x = c(1, 2), y = c(1, 2), filename="r-docs/name-of-my-plotly-file")
+```{r}
+plotly_POST(p, filename="r-docs/name-of-my-plotly-file")
 ```
+
+View your Plotly graphs at [https://plot.ly/organize](https://plot.ly/organize).
