--- a/_posts/r/2015-07-30-privacy.Rmd
+++ b/_posts/r/2015-07-30-privacy.Rmd
@@ -27,17 +27,11 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 library(plotly)
 
 # public
-plot_ly(x = c(0, 2, 4), y = c(0, 4, 2), filename="r-docs/public-graph")
+p <- plot_ly(x = c(0, 2, 4), y = c(0, 4, 2))
+plotly_POST(p, filename="r-docs/public-graph")
 
 # private
-plot_ly(x = c(0, 2, 4), y = c(0, 4, 2), world_readable = FALSE, filename="r-docs/private-graph")
-
-# another option is to "build" the plot, then tack on these properties
-p <- plot_ly(x = c(0, 2, 4), y = c(0, 4, 2))
-p <- plotly_build(p)
-p$filename <- "r-docs/private-graph"
-p$world_readable <- FALSE
-p
+plotly_POST(p, world_readable = FALSE, filename="r-docs/private-graph")
 ```
 
 Creating public graphs on Plotly is free. To create more than one private graphs, [sign up for a Plotly subscription](https://plot.ly/products/cloud/).
