--- a/_posts/r/2015-07-30-get-requests.Rmd
+++ b/_posts/r/2015-07-30-get-requests.Rmd
@@ -19,11 +19,11 @@ Sys.setenv("plotly_username"="RPlotBot")
 Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```
 
-Download Plotly figures directly into R with `get_figure`. This takes the `username` and the `plot_id` as arguments.
+Download Plotly figures directly into R with `get_figure()`. This takes the `username` and the `plot_id` as arguments.
 
 For example, to download [https://plot.ly/~cpsievert/559](https://plot.ly/~cpsievert/559) into R, call:
 
-```{r, message=FALSE}
+```{r}
 library(plotly)
 fig <- get_figure("cpsievert", "559")
 ```
@@ -31,13 +31,13 @@ fig <- get_figure("cpsievert", "559")
 <br>
 Once the figure is downloaded, you can edit it like any plotly object. This will create a new figure unless you specify the same filename as the figure that you downloaded.
 
-```{r, message=FALSE}
+```{r}
 layout(fig, title = paste("Modified on ", Sys.time()))
 ```
 
-### Adding Traces with `get_figure` and `subplot`.
+### Adding Traces with `get_figure()` and `subplot()`.
 
-After downloading a figure with subplots, use `plotly_build` to build the figure. 
+After downloading a figure with subplots, use `plotly_build()` to build the figure. 
 
 ```{r, message=FALSE}
 fig <- get_figure("chelsea_lyn", "6343")
