don't eval shiny

--- a/_posts/r/2015-07-30-shiny.Rmd
+++ b/_posts/r/2015-07-30-shiny.Rmd
@@ -16,9 +16,7 @@ display_as: get_request
 ---
 
 ```{r, echo = FALSE, message=FALSE}
-knitr::opts_chunk$set(message = FALSE)
-Sys.setenv("plotly_username"="RPlotBot")
-Sys.setenv("plotly_api_key"="q0lz6r5efr")
+knitr::opts_chunk$set(eval = FALSE)
 ```
 
 # Plotly Graphs in Shiny
@@ -32,7 +30,7 @@ As of version 2.0, plotly's R package utilizes the [htmlwidgets](http://www.html
 The key idea is to pass a plotly object to `renderPlotly()` on the server and place it in the UI with `plotlyOutput()`.
 
 #### `ui.R`
-```{r, message=FALSE}
+```{r}
 
 library(shiny)
 library(plotly)
@@ -49,7 +47,7 @@ shinyUI(fluidPage(
 ```
 
 #### `server.R`
-```{r, message=FALSE}
+```{r}
 library(shiny)
 library(plotly)
 
@@ -78,7 +76,7 @@ shinyServer(function(input, output) {
 You can also convert ggplot2 objects to plotly objects with `ggplotly()`
 
 #### `ui.R`
-```{r, message=FALSE}
+```{r}
 library(shiny)
 library(plotly)
 
@@ -94,7 +92,7 @@ shinyUI(fluidPage(
 ```
 
 #### `server.R`
-```{r, message=FALSE}
+```{r}
 library(shiny)
 library(plotly)
 
